refactor(publishingqueue): address PR review comments #34319
- Replace Collections.emptyList() with List.of()
- Change parseStatusSafely() to return Optional<Status>
- Make status parsing case-insensitive